--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@ button{
 	<div class="popular-slider contaner-center">
 		<h2 class="zag zag-pop"><span>ПОПУЛЯРНЫЕ </span>КОЛЛЕКЦИИ</h2>
 		<div class="poplular-slider-track">
-		<div class="popular">
+		<a href="/" class="popular">
 			<img src="img/polularslider/banner.png" class="cimg" alt="">
-		</div>
+		</a>
 
 		<div class="popular">
 			<img src="img/polularslider/tenager.png" class="cimg" alt="">
