--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@ button{
 	justify-content: space-between;
 	height: 100%;
 	touch-action: none;
+	-transition: 1s;
+}
+
+.trans{
+	transition: 0.8s;
 }
 
 .popular{
@@ -96,9 +101,9 @@ button{
 	<div class="popular-slider contaner-center">
 		<h2 class="zag zag-pop"><span>ПОПУЛЯРНЫЕ </span>КОЛЛЕКЦИИ</h2>
 		<div class="poplular-slider-track">
-		<a href="/" class="popular">
+		<div href="/" class="popular">
 			<img src="img/polularslider/banner.png" class="cimg" alt="">
-		</a>
+		</div>
 
 		<div class="popular">
 			<img src="img/polularslider/tenager.png" class="cimg" alt="">
